@@ -11,6 +11,9 @@
 
 #include <config.h>
 #include <string.h>
+
+#include <popt.h>
+
 #include <gconf/gconf.h>
 #include <gconf/gconf-client.h>
 #include <libgnome/gnome-gconf.h>
