@@ -1,5 +1,9 @@
 2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* bonobo/bonobo-ui-init-gtk.c:
+	* bonobo/bonobo-ui-preferences.c:
+	* bonobo/bonobo-ui-util.c: HACK! compilation fixes manually
+	including popt.h
 
 2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
